Главная мобилка адаптив

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <img src="src/images/call-icon.svg" alt="">
                     <a href="#">+7 707 604 02 08</a>
                 </div>
-                <div class="cart-section d-none d-md-flex">
+                <div class="cart-section d-md-flex">
                     <p class="luxurymebel">luxurymebel</p>
                 </div>
             </div>
@@ -50,32 +50,22 @@
                 </div>
             </div>
             <div class="inner-white-mobile d-md-none">
-                <img src="src/images/mobile-logo.png" alt="" class="logo-m">
+                <img src="src/images/big-logo.png" alt="" class="logo-m">
                 <div class="right-side">
-                    <div class="cart-icon-block-mobile">
-                        <img src="src/images/black-cart.svg" alt="" class="black-cart">
-                        <div class="cart-red-count">1</div>
-                    </div>
                     <img src="src/images/menu-mobile-icon.svg" onclick="openNav()" alt="">
                 </div>
                 <div id="myNav" class="overlay">
                     <img src="src/images/close-icon.svg" alt="" class="closebtn" onclick="closeNav()">
                     <div class="overlay-content">
-                        <img src="src/images/mobile-logo.png" alt="" class="logo-mb">
-                        <p>Строительство спорт площадок в РК</p>
-                        <div class="search-input">
-                            <input type="text" placeholder="Что вы ищите?">
-                            <img src="src/images/search-icon.svg" alt="" class="search-icon">
-                        </div>
-                        <a href="/">Главная</a>
-                        <a href="/iss-gazon.html">Товары и услуги</a>
-                        <a href="/onas.html">О нас</a>
-                        <a href="/contacts.html">Контакты</a>
-                        <a href="/oplata.html">Оплата и доставка</a>
-                        <a href="/futbol-pole.html">Наши работы</a>
-                        <a href="/news.html">Новости</a>
+                        <p class="mob-menu-logo">luxurymebel</p>
+                        <a href="/" class="active">Главная</a>
+                        <a href="/iss-gazon.html">Магазин</a>
+                        <a href="/onas.html">Мебель на заказ</a>
+                        <a href="/contacts.html">О нас</a>
+                        <a href="/oplata.html">Контакты</a>
                         <div class="border-line"></div>
-                        <a href="">+7 707 604 02 08</a>
+                        <a href="">+7 777 229 88 89</a>
+                        <a href="">+7 747 981 98 62</a>
                         <button class="green-btn-outline" type="button" data-toggle="modal" data-target="#zayavkaModal">Оставить заявку</button>
                     </div>
                 </div>
@@ -130,39 +120,63 @@
     </script>
 </header>
 
+<div class="sec-main-slider">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-4">
+                <h2 class="main-header">СТУЛЬЯ НА ЗАКАЗ</h2>
+                <button class="zakaz-body-btn main-s-btn">Подробнее </button>
+                <div class="d-flex">
+                    <div class="arrow-btn prev-btn">
+                        <img src="src/images/prev.png">
+                    </div>
+                    <div class="arrow-btn next-btn">
+                        <img src="src/images/next.png">
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-7 offset-lg-1">
+                <div class="main-slider-block">
+                    <img src="src/images/stol1.png">
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 <div class="sec-mebel-na-zakaz">
     <div class="container">
         <h3 class="section-header">МЕБЕЛЬ НА ЗАКАЗ В АЛМАТЫ</h3>
-        <div class="d-flex justify-content-center">
+        <div class="d-flex justify-content-center flex-column flex-md-row">
             <div class="room-zakaz room-zakaz-big">
                 <div class="zakaz-body">
                     <h4>Кухни на заказ</h4>
-                    <button>Подробнее </button>
+                    <button class="zakaz-body-btn">Подробнее </button>
                 </div>
             </div>
-            <div class="d-flex flex-wrap room-zakaz-other">
+            <div class="d-flex flex-wrap room-zakaz-other flex-column flex-md-row">
                 <div class="room-zakaz room-zakaz-1">
                     <div class="zakaz-body">
                         <h4>Кухни на заказ</h4>
-                        <button>Подробнее </button>
+                        <button class="zakaz-body-btn">Подробнее </button>
                     </div>
                 </div>
                 <div class="room-zakaz room-zakaz-2">
                     <div class="zakaz-body">
                         <h4>Гостиные на заказ</h4>
-                        <button>Подробнее </button>
+                        <button class="zakaz-body-btn">Подробнее </button>
                     </div>
                 </div>
                 <div class="room-zakaz room-zakaz-3">
                     <div class="zakaz-body">
                         <h4>Спальни на заказ</h4>
-                        <button>Подробнее </button>
+                        <button class="zakaz-body-btn">Подробнее </button>
                     </div>
                 </div>
                 <div class="room-zakaz room-zakaz-4">
                     <div class="zakaz-body">
                         <h4>Прихожие на заказ</h4>
-                        <button>Подробнее </button>
+                        <button class="zakaz-body-btn">Подробнее </button>
                     </div>
                 </div>
             </div>
@@ -173,7 +187,7 @@
 <div class="sec-pochemu-v-nas">
     <div class="container">
         <h3 class="section-header">почему выбирают нас?!</h3>
-        <div class="d-flex justify-content-center pb-lg-5">
+        <div class="d-flex justify-content-center pb-lg-5 flex-column flex-md-row align-items-center align-items-md-baseline">
             <div class="reason">
                 <img src="src/images/medal.png">
                 <p>11 лет на рынке изготовления мебели</p>
@@ -187,7 +201,7 @@
                 <p>Собственное производство</p>
             </div>
         </div>
-        <div class="d-flex justify-content-center pt-lg-3">
+        <div class="d-flex justify-content-center pt-lg-3 flex-column flex-md-row align-items-center align-items-md-baseline">
             <div class="reason">
                 <img src="src/images/shield.png">
                 <p>Европейское качество</p>
@@ -226,7 +240,7 @@
             <div class="footer-logo">
                 <img src="src/images/footer-logo.png">
             </div>
-            <div class="footer-contacts d-flex">
+            <div class="footer-contacts d-md-flex d-none">
                 <div class="pr-lg-5 mr-lg-4">
                     <p class="title">Контакты</p>
                     <p class="body">+7 707 604 02 08</p>
@@ -237,6 +251,16 @@
                 </div>
             </div>
             <button class="green-btn-outline" type="button" data-toggle="modal" data-target="#zayavkaModal">Оставить заявку</button>
+        </div>
+        <div class="footer-contacts d-flex d-md-none justify-content-between">
+            <div class="pr-lg-5 mr-lg-4">
+                <p class="title">Контакты</p>
+                <p class="body">+7 707 604 02 08</p>
+            </div>
+            <div>
+                <p class="title">Реквизиты</p>
+                <p class="body">Tolebaevtalgat1993@gmail.com<br>г. Алматы, ул. Мамбетова 82.</p>
+            </div>
         </div>
         <hr class="footer-line">
         <p class="footer-law-text">ВСЕ ПРАВА ЗАЩИЩЕНЫ. © ИНТЕРНЕТ-МАГАЗИН МЕБЕЛИ В АЛМАТЫ И ПРОИЗВОДСТВА МЕБЕЛИ НА ЗАКАЗ - ТОО «ПРЕСТИЖ ЛЛС» 2020</p>
