Мебель - главная верстка полностью

--- a/magazin.html
+++ b/magazin.html
@@ -15,19 +15,19 @@
 <div class="sec-main-magazin">
     <div class="container">
         <nav aria-label="breadcrumb">
-            <ol class="breadcrumb">
+            <ol class="breadcrumb breadcrumb-custom">
                 <li class="breadcrumb-item breadcrumb-first-item"><a href="/">Главная</a></li>
                 <li class="breadcrumb-item active" aria-current="page">Магазин</li>
             </ol>
         </nav>
         <div class="d-flex justify-content-center flex-column flex-md-row">
-            <div class="room-zakaz room-zakaz-big">
+            <div class="room-zakaz room-zakaz-big room-zakaz-magazin">
                 <div class="zakaz-body">
                     <h4>Стулья</h4>
                     <button class="zakaz-body-btn">Подробнее </button>
                 </div>
             </div>
-            <div class="room-zakaz room-zakaz-big">
+            <div class="room-zakaz room-zakaz-big room-zakaz-magazin">
                 <div class="zakaz-body">
                     <h4>Мебель для детских садов</h4>
                     <button class="zakaz-body-btn">Подробнее </button>
