--- a/mebel-na-zakaz.html
+++ b/mebel-na-zakaz.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="src/css/bootstrap.min.css">
     <link rel="stylesheet" href="src/style.css">
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
+    <script src="src/js/jquery.min.js"></script>
     <script src="src/js/bootstrap.min.js"></script>
 </head>
 <body>
